--- a/YouQu/YouQu/Home/View/ProductDetailsCell.xib
+++ b/YouQu/YouQu/Home/View/ProductDetailsCell.xib
@@ -12,17 +12,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="productDetailsCell" id="gTV-IL-0wX" customClass="ProductDetailsCell">
-            <rect key="frame" x="0.0" y="0.0" width="214" height="298"/>
+            <rect key="frame" x="0.0" y="0.0" width="146" height="302"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="214" height="298"/>
+                <rect key="frame" x="0.0" y="0.0" width="146" height="302"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_0673" translatesAutoresizingMaskIntoConstraints="NO" id="Ky8-rK-cjD">
-                        <rect key="frame" x="0.0" y="0.0" width="214" height="220"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="011" translatesAutoresizingMaskIntoConstraints="NO" id="Ky8-rK-cjD">
+                        <rect key="frame" x="0.0" y="0.0" width="146" height="224"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我于杀戮中绽放，亦如黎明中的花朵我于杀戮中绽放，亦如黎明中的花朵" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vs5-Zg-PbJ">
-                        <rect key="frame" x="10" y="227" width="194" height="34"/>
+                        <rect key="frame" x="10" y="231" width="126" height="34"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="34" id="zMY-oH-CmW"/>
                         </constraints>
@@ -31,13 +31,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥99,99" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdd-H9-IBp">
-                        <rect key="frame" x="10" y="261" width="97" height="37"/>
+                        <rect key="frame" x="10" y="265" width="63" height="37"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="销量:900" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-af-Hau">
-                        <rect key="frame" x="107" y="261" width="97" height="37"/>
+                        <rect key="frame" x="73" y="265" width="63" height="37"/>
                         <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -62,11 +62,11 @@
                 <constraint firstItem="sdd-H9-IBp" firstAttribute="top" secondItem="vs5-Zg-PbJ" secondAttribute="bottom" id="vEv-YF-bqG"/>
                 <constraint firstItem="f4U-af-Hau" firstAttribute="top" secondItem="vs5-Zg-PbJ" secondAttribute="bottom" id="ww8-Xc-C6k"/>
             </constraints>
-            <size key="customSize" width="214" height="298"/>
-            <point key="canvasLocation" x="116" y="122"/>
+            <size key="customSize" width="146" height="302"/>
+            <point key="canvasLocation" x="82" y="124"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="IMG_0673" width="1280" height="1280"/>
+        <image name="011" width="606" height="735"/>
     </resources>
 </document>
