6_16,搭建好了购物车60%的界面

--- a/YouQu/YouQu/Home/View/TestCollCell.xib
+++ b/YouQu/YouQu/Home/View/TestCollCell.xib
@@ -18,17 +18,24 @@
                 <rect key="frame" x="0.0" y="0.0" width="349" height="425"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="011" translatesAutoresizingMaskIntoConstraints="NO" id="cPe-0F-kf5">
-                        <rect key="frame" x="0.0" y="0.0" width="349" height="333.5"/>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Osx-YN-CMa">
+                        <rect key="frame" x="8" y="157" width="333" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </imageView>
+                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="这是一个超级长的文本这是一个超级长的文本文本"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="这是一个超级长的文本超级长的文本超级长的" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMa-nw-kG3">
+                        <rect key="frame" x="8" y="204" width="333" height="30"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <size key="customSize" width="349" height="425"/>
             <point key="canvasLocation" x="145.5" y="363.5"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <image name="011" width="606" height="735"/>
-    </resources>
 </document>
